# IEEE-skills

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude-plugin/: plugin.json
assets/bibtex/: ieee-bst-control.bib
assets/latex/: ieee-pes-template.tex  references.bib
examples/: create_ieee_figures.py
scripts/: generate_examples.py  validate_project.py
skills/ieee-power-citation/: SKILL.md
skills/ieee-power-citation/agents/: openai.yaml
skills/ieee-power-citation/references/: ieee-reference-style.md  pes-reference-checklist.md
skills/ieee-power-figure/: SKILL.md
skills/ieee-power-figure/agents/: openai.yaml
skills/ieee-power-figure/references/: export-qa.md  ieee-figure-standards.md  journal-scope.md  power-chart-patterns.md
skills/ieee-power-figure/scripts/: ieee_figure_smoke.py
skills/ieee-power-terminology/: SKILL.md
skills/ieee-power-terminology/agents/: openai.yaml
skills/ieee-power-terminology/references/: journal-scope.md  term-map.md
skills/ieee-power-terminology/scripts/: normalize_terms.py
skills/ieee-power-writing/: SKILL.md
skills/ieee-power-writing/agents/: openai.yaml
skills/ieee-power-writing/references/: abstract-keywords.md  manuscript-structure.md  style-guardrails.md  tps-vs-tsg.md
src/ieee_skills/: __init__.py  __main__.py  plots.py  references.py  styles.py  terms.py
tests/: test_styles.py  test_terms.py
