[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ieee-skills"
version = "0.1.0"
description = "IEEE PES Transactions-ready skills and plotting helpers for power systems and smart grid papers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "IEEE-skills contributors" }]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.23",
  "pandas>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 96
target-version = "py39"
